Docs: 課前操作指南加入測試模式關閉步驟
更新內容：
1. 步驟 4.3 擴充為「關閉測試模式（重要！）」
   - 明確說明前端和後端都需要關閉測試模式
   - 提供詳細的檢查和修改步驟
   - 加入驗證方法（確認更新連續天數時無測試模式警告）

2. 檢查清單更新
   - 分別列出前端和後端的測試模式檢查項目
   - 確保正式上線前不會遺漏

重要性：
- 避免正式上線後仍使用測試日期
- 防止連續天數計算錯誤
- 確保儀表板顯示正確的今日日期

--- a/課前操作指南.md
+++ b/課前操作指南.md
@@ -163,16 +163,49 @@ export const TEST_TODAY_DATE = null; // 設為 null 使用真實日期
 - 2026-01-13（2026 年 1 月 13 日）
 - 2026-02-01（2026 年 2 月 1 日）
 
-### 4.3 確認測試模式已關閉
+### 4.3 關閉測試模式（重要！）
 
-確認 `TEST_TODAY_DATE` 的設定：
+⚠️ **正式上線前必須執行**：系統有兩個地方需要關閉測試模式，否則會使用錯誤的日期！
+
+#### 前端（儀表板）
+
+開啟 `js/config.js`，確認第 21 行：
 
 ```javascript
-export const TEST_TODAY_DATE = null; // 設為 null 使用真實日期
+export const TEST_TODAY_DATE = null; // null = 使用真實的今天日期
 ```
 
 ✅ **正確**：`null`（使用真實今天日期）
-❌ **錯誤**：`new Date('2026-01-09')`（固定測試日期）
+❌ **錯誤**：`new Date('2025-12-21')`（固定測試日期）
+
+#### 後端（Google Apps Script）
+
+1. 開啟 Google Sheets
+2. 點擊「擴充功能」→「Apps Script」
+3. 找到**第 27 行**（在最上方）：
+
+```javascript
+const TEST_TODAY_DATE = null; // 正式模式
+```
+
+如果看到：
+```javascript
+const TEST_TODAY_DATE = new Date('2025-12-21'); // 測試模式
+```
+
+請改為：
+```javascript
+const TEST_TODAY_DATE = null; // 正式模式
+```
+
+4. 按「儲存」（磁碟圖示）
+
+#### 驗證測試模式已關閉
+
+執行「📋 打卡系統」→「🔄 更新連續天數」，確認提示訊息中**沒有**顯示：
+❌ 「⚠️ 測試模式：使用模擬日期...」
+
+如果有看到這個警告，表示後端測試模式還沒關閉！
 
 ### 4.4 儲存並推送到 GitHub
 
@@ -341,7 +374,8 @@ https://YOUR_USERNAME.github.io/checkin-dashboard/
 
 ### 儀表板設定
 - [ ] ✅ `COURSE_START_DATE` 已設為正式開課日期
-- [ ] ✅ `TEST_TODAY_DATE` 設為 `null`
+- [ ] ✅ 前端測試模式已關閉（`js/config.js` 的 `TEST_TODAY_DATE` 設為 `null`）
+- [ ] ✅ 後端測試模式已關閉（Apps Script 的 `TEST_TODAY_DATE` 設為 `null`）
 - [ ] ✅ 已推送到 GitHub 並部署
 
 ### Apps Script 設定
